pkg/objects/Alocation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account related to Customer.</description>
        <inlineHelpText>Account related to Customer.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alocations</relationshipLabel>
        <relationshipName>Alocacoes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllocatedProject__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project employee allocations.</description>
        <inlineHelpText>Project employee allocations.</inlineHelpText>
        <label>Allocated Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocationForm__c</fullName>
        <description>When increasing the load, use this field to activate check-on in the Allocated__c field</description>
        <inlineHelpText>When increasing the load, use this field to activate check-on in the Allocated__c field</inlineHelpText>
        <label>Allocation form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllocationStatus__c</fullName>
        <description>Describes which allocation state an employee is in.</description>
        <inlineHelpText>Describes which allocation state an employee is in.</inlineHelpText>
        <label>Allocation status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alocado_Form__c</fullName>
        <description>Quando subir a carga, utilizar este campo para ativar check-on no campo Alocado_c</description>
        <label>Alocado_Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alocado_Projeto__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Alocado Projeto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alocado_test__c</fullName>
        <formula>IF (((ISBLANK(Data_de_Termino__c)) || (Data_de_Termino__c &gt; TODAY()) &amp;&amp; Data_De_Inicio__c &lt;= TODAY()) , 1, 0)</formula>
        <label>Alocado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCategory__c</fullName>
        <description>Billing Category to which the Allocation belongs.</description>
        <inlineHelpText>Billing Category to which the Allocation belongs.</inlineHelpText>
        <label>Billing Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Not Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carga_Horaria__c</fullName>
        <label>Carga Horária</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                    <default>true</default>
                    <label>Full-Time</label>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Allocation Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>QJT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_De_Inicio__c</fullName>
        <inlineHelpText>Data de Início da Alocação</inlineHelpText>
        <label>Data De Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_de_Termino__c</fullName>
        <inlineHelpText>Data de Término (Ou data prevista de Término) da Alocação</inlineHelpText>
        <label>Data de Término</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>Identification of the Employee linked to this Allocation.</description>
        <inlineHelpText>Identification of the Employee linked to this Allocation.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Alocations (Funcionário)</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date (or Expected End Date) of the Allocation</description>
        <inlineHelpText>End Date (or Expected End Date) of the Allocation</inlineHelpText>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <formula>Project__r.Engagement__c</formula>
        <label>Engagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelPicklist__c</fullName>
        <formula>Employee__r.Name</formula>
        <label>LabelPicklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberHoursDay__c</fullName>
        <description>The number of hours of the day that the Employee will be working in this Allocation.</description>
        <inlineHelpText>The number of hours of the day that the Employee will be working in this Allocation.</inlineHelpText>
        <label>Number of hours in the day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectCostCenter__c</fullName>
        <description>The content present in the Cost Center field is present in the Project linked to Allocation.</description>
        <formula>TEXT(Project__r.CostCenter__c)</formula>
        <inlineHelpText>The content present in the Cost Center field is present in the Project linked to Allocation.</inlineHelpText>
        <label>Project Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Projeto</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identification of the Project in which the Employee is allocated.</description>
        <inlineHelpText>Identification of the Project in which the Employee is allocated.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Alocations</relationshipLabel>
        <relationshipName>ProjectAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsability__c</fullName>
        <description>The responsibility rests with someone who holds the chosen position.</description>
        <inlineHelpText>The responsibility rests with someone who holds the chosen position.</inlineHelpText>
        <label>Attribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst 1</fullName>
                </value>
                <value>
                    <fullName>Business Analyst 2</fullName>
                </value>
                <value>
                    <fullName>Full System Analyst 1</fullName>
                </value>
                <value>
                    <fullName>Full System Analyst 2</fullName>
                </value>
                <value>
                    <fullName>System analyst</fullName>
                </value>
                <value>
                    <fullName>System analyst 2</fullName>
                </value>
                <value>
                    <fullName>Senior System Analyst</fullName>
                </value>
                <value>
                    <fullName>Functional analyst</fullName>
                    <default>true</default>
                    <label>Functional analyst</label>
                </value>
                <value>
                    <fullName>Solution Architect</fullName>
                </value>
                <value>
                    <fullName>Consultant 1</fullName>
                </value>
                <value>
                    <fullName>Consultant 2</fullName>
                </value>
                <value>
                    <fullName>Salesforce Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce/Vlocity Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce Consultant 2</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant 1</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant 2</fullName>
                </value>
                <value>
                    <fullName>Vlocity Consultant</fullName>
                </value>
                <value>
                    <fullName>Systems Coordinator 1</fullName>
                </value>
                <value>
                    <fullName>Systems Coordinator 2</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Salesforce Specialist</fullName>
                </value>
                <value>
                    <fullName>Vlocity Specialist</fullName>
                </value>
                <value>
                    <fullName>Manager 1</fullName>
                </value>
                <value>
                    <fullName>Manager 2</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Manager 1</fullName>
                </value>
                <value>
                    <fullName>Senior Manager 2</fullName>
                </value>
                <value>
                    <fullName>Shared Services Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Allocation Start Date</description>
        <inlineHelpText>Allocation Start Date</inlineHelpText>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusAfterAllocation__c</fullName>
        <description>Describe what the employee&apos;s status will be after the current allocation.</description>
        <inlineHelpText>Describe what the employee&apos;s status will be after the current allocation.</inlineHelpText>
        <label>Status after Allocation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusAllocation__c</fullName>
        <description>Describes which allocation state an employee is in.</description>
        <inlineHelpText>Describes which allocation state an employee is in.</inlineHelpText>
        <label>Status allocation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Employee who is the Leader of the Project in which the Employee is allocated.</description>
        <inlineHelpText>The Employee who is the Leader of the Project in which the Employee is allocated.</inlineHelpText>
        <label>Team Leader</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Alocations (Team Leader)</relationshipLabel>
        <relationshipName>Alocacoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestAllocated__c</fullName>
        <description>The number of days the employee will be allocated.</description>
        <formula>IF (((ISBLANK(EndDate__c)) || (EndDate__c &gt; TODAY()) &amp;&amp; StartDate__c &lt;= TODAY()) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the employee will be allocated.</inlineHelpText>
        <label>Test Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeAllocation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Time Allocation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Alocacao__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Time_Alocação</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Workload__c</fullName>
        <description>Represents the employee&apos;s workload in this Allocation.</description>
        <inlineHelpText>Represents the employee&apos;s workload in this Allocation.</inlineHelpText>
        <label>Workload</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                    <default>true</default>
                    <label>Full-Time</label>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Data_De_Inicio__c</columns>
        <columns>Alocado_test__c</columns>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Responsability__c</columns>
        <columns>Project__c</columns>
        <columns>Data_de_Termino__c</columns>
        <columns>Carga_Horaria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Aloca_o_de_PNTs</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Project__c</columns>
        <columns>Data_De_Inicio__c</columns>
        <columns>Data_de_Termino__c</columns>
        <columns>Engagement__c</columns>
        <columns>Alocado_Projeto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alocado_Projeto__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>PROMOTION</value>
        </filters>
        <label>Alocação de PNTs</label>
    </listViews>
    <listViews>
        <fullName>Alocacao</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Project__c</columns>
        <columns>Data_De_Inicio__c</columns>
        <columns>Data_de_Termino__c</columns>
        <columns>Engagement__c</columns>
        <columns>Alocado_Projeto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>Claro - Segunda Fase</value>
        </filters>
        <filters>
            <field>Alocado_Projeto__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Alocação</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Allocation code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PreviousEndDateTheInitialDate</fullName>
        <active>true</active>
        <description>The Allocation end date cannot be earlier than the Allocation start date.</description>
        <errorConditionFormula>OR(
  YEAR(EndDate__c)&lt; YEAR(StartDate__c),
 AND(
  DAY(EndDate__c) &lt; DAY(StartDate__c) , 
  MONTH(EndDate__c)= MONTH(StartDate__c),
  YEAR(EndDate__c)= YEAR(StartDate__c)
 ),
 AND( 
  MONTH(EndDate__c)&lt; MONTH(StartDate__c),
  YEAR(EndDate__c)= YEAR(StartDate__c)
 )
)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>The Allocation end date cannot be earlier than the Allocation start date.</errorMessage>
    </validationRules>
</CustomObject>